# lo21-splendorduel

./: .clang-format  .gitignore  CMakeLists.txt  Qt.pro  README.md  debug.cpp  debug.h  main.cpp  main.h
Qt_cmake/: main_old.cpp  mainwindow.cpp  mainwindow.h  playerinputdialog.cpp  playerinputdialog.h  popup_text.cpp  popup_text.h  qt_choicepopup.h  qt_plateau.cpp  qt_plateau.h  qt_popup_couleur.cpp  qt_popup_couleur.h  qt_popup_info.h  qt_popup_joker.cpp  qt_popup_joker.h  qt_popup_tirageoupioche.h  qt_popup_yesno.h  qt_tirages.cpp  qt_tirages.h  qt_vue_carte.cpp  qt_vue_carte.h  qt_vue_jeton.cpp  qt_vue_jeton.h
classes/: Exception.h  bag.cpp  bag.h  board.cpp  board.h  card.cpp  card.h  carte.cpp  carte.h  deck.cpp  deck.h  draw.h  game.cpp  game.h  history.cpp  history.h  jetons.cpp  jetons.h  jeu.cpp  jeu.h  joueur.cpp  joueur.h  json.cpp  json.h  pioche.cpp  pioche.h  plateau.cpp  plateau.h  player.cpp  player.h  privilege.cpp  privilege.h  sac.cpp  sac.h  tirage.cpp  tirage.h  tokens.cpp  tokens.h
rapport/: Rapport2.md  Rapport_3.md  Rapport_final.md  UML.txt  UML_v2.txt  UML_v3.txt  concepts.md  rapport1.md
src/: backup.json  cards.json  history.json
src/Qt/app/: board.qt.cpp  card_view.qt.cpp  color_popup.qt.cpp  draws.qt.cpp  joker_popup.qt.cpp  main_window.qt.cpp  player_input_dialog.qt.cpp  text_popup.qt.cpp  token_view.qt.cpp
src/Qt/headers/: board.qt.h  card_view.qt.h  choice_popup.qt.h  color_popup.qt.h  draws.qt.h  joker_popup.qt.h  main_window.qt.h  player_input_dialog.qt.h  text_popup.qt.h  token_view.qt.h
src/core/app/: board.cpp  card.cpp  deck.cpp  draw.cpp  game.cpp  json.cpp  player.cpp  privilege.cpp  tokens.cpp
src/core/headers/: Exception.h  bag.h  board.h  draw.h  game.h  history.h  player.h  privilege.h  tokens.h
